# agent_kit

./: .env.example  .gitignore  DEMO.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
agentkit/: __init__.py  config.py
agentkit/api/: app.py  schemas.py
agentkit/core/: checkpoint.py  llm.py  orchestrator.py  state.py
agentkit/core/graph/: __init__.py  nodes.py
agentkit/eval/: __init__.py  baseline.json  dataset.json  runner.py  stub_llm.py
agentkit/eval/corpus/: calculations.md  deployment.md  retrieval.md
agentkit/obs/: __init__.py  cost.py  trace.py
agentkit/retrieval/: __init__.py  chunking.py  embeddings.py  ingest.py  store.py
agentkit/tools/: __init__.py  calc.py  client.py  server.py
data/docs/: agentkit_overview.md  deployment.md
infra/: Dockerfile  docker-compose.yml  init.sql
scripts/: demo.sh
tests/: manual_checkpoint_check.py  manual_hitl_check.py  manual_mcp_check.py  manual_obs_check.py  manual_rag_check.py  test_eval.py  test_graph.py  test_hitl.py  test_obs.py  test_orchestrator.py  test_retrieval.py  test_smoke.py  test_tools.py
